--- a/.github/workflows/podman-image.yml
+++ b/.github/workflows/podman-image.yml
@@ -13,10 +13,19 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Install Podman and Trivy
+      - name: Install Podman
         run: |
           sudo apt update
-          sudo apt install -y podman trivy
+          sudo apt install -y podman
+
+      - name: Install Trivy (Aqua Security Repo)
+        run: |
+          sudo apt update
+          sudo apt install -y wget gnupg2
+          wget -qO - https://aquasecurity.github.io/trivy-repo/deb/public.key | sudo apt-key add -
+          echo "deb https://aquasecurity.github.io/trivy-repo/deb stable main" | sudo tee -a /etc/apt/sources.list.d/trivy.list
+          sudo apt update
+          sudo apt install -y trivy
 
       - name: Build Image with Podman
         run: |
@@ -25,3 +34,4 @@ jobs:
       - name: Scan Image with Trivy
         run: |
           trivy image my-sample-app:latest
+
