--- a/.github/workflows/podman-image.yml
+++ b/.github/workflows/podman-image.yml
@@ -21,7 +21,7 @@ jobs:
         run: |
           podman build -t python-podman-app:latest .
 
-  scan:
+    scan:
     runs-on: ubuntu-latest
     needs: build
     steps:
@@ -32,14 +32,15 @@ jobs:
 
       - name: Install Trivy
         run: |
-          sudo apt install -y wget
-          wget https://github.com/aquasecurity/trivy/releases/latest/download/trivy_0.49.1_Linux-64bit.tar.gz
-          tar -xvf trivy_0.49.1_Linux-64bit.tar.gz
-          sudo mv trivy /usr/local/bin/
+          wget -qO- https://aquasecurity.github.io/trivy-repo/deb/public.key | sudo tee /etc/apt/trusted.gpg.d/trivy.asc
+          echo "deb https://aquasecurity.github.io/trivy-repo/deb jammy main" | sudo tee /etc/apt/sources.list.d/trivy.list
+          sudo apt update
+          sudo apt install -y trivy
 
       - name: Scan Podman Image with Trivy
         run: |
           trivy image python-podman-app:latest
+
 
 
 
