--- a/.github/workflows/podman-image.yml
+++ b/.github/workflows/podman-image.yml
@@ -1,4 +1,4 @@
-name: Build and Scan Podman Image
+name: Podman Build and Scan
 
 on:
   push:
@@ -9,19 +9,25 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Code
+      - name: Checkout Repository
         uses: actions/checkout@v4
 
       - name: Install Podman
         run: |
           sudo apt update
           sudo apt install -y podman
+          podman --version
 
       - name: Build Podman Image
         run: |
           podman build -t python-podman-app:latest .
 
-    scan:
+      - name: Run Podman Container (Optional)
+        run: |
+          podman run -d --name test-app python-podman-app:latest
+          podman ps -a
+
+  scan:
     runs-on: ubuntu-latest
     needs: build
     steps:
@@ -42,8 +48,4 @@ jobs:
           trivy image python-podman-app:latest
 
 
-
-
-
-        
 
