--- a/.github/workflows/podman-image.yml
+++ b/.github/workflows/podman-image.yml
@@ -17,15 +17,15 @@ jobs:
           sudo apt update
           sudo apt install -y podman
           podman --version
+          podman info
 
       - name: Build Podman Image
         run: |
-          podman build -t python-podman-app:latest .
+          podman build -t localhost/python-podman-app:latest .
 
-      - name: Run Podman Container (Optional)
+      - name: Verify Image Exists
         run: |
-          podman run -d --name test-app python-podman-app:latest
-          podman ps -a
+          podman images
 
   scan:
     runs-on: ubuntu-latest
@@ -35,6 +35,7 @@ jobs:
         run: |
           sudo apt update
           sudo apt install -y podman
+          podman --version
 
       - name: Install Trivy
         run: |
@@ -42,10 +43,15 @@ jobs:
           echo "deb https://aquasecurity.github.io/trivy-repo/deb jammy main" | sudo tee /etc/apt/sources.list.d/trivy.list
           sudo apt update
           sudo apt install -y trivy
+          trivy --version
 
       - name: Scan Podman Image with Trivy
         run: |
-          trivy image python-podman-app:latest
+          podman pull localhost/python-podman-app:latest
+          trivy image --input localhost/python-podman-app:latest
+
+   
+
 
 
 
